--- a/sobresenai.html
+++ b/sobresenai.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="imagem-senai">
-                <img src="senaimaraca.jpg">
+                <img src="images/senaimaraca.jpg">
             </div>
         </section>
     </div>
