--- a/cursos.html
+++ b/cursos.html
@@ -30,7 +30,7 @@
     .container {
       max-width: 1200px;
       margin: 20px auto;
-      background-image: url('images/pessoas.jpg');
+      background-image: url('pessoas.jpg');
       background-size: cover;
       background-position: center;
       border-radius: 8px;
