--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <h2>Cursos Técnicos</h2>
             <div class="cursos">
                 <div>Técnico em Desenvolvimento de Sistemas</div>
-                <div>Técnico em Mecatrônica</div>
-                <div>Técnico em Eletrotécnica</div>
-                <div>Técnico em Logística</div>
+                <div>Técnico em Redes de Computadores</div>
+                <div>Técnico em Suporte e Manutenção em Informática</div>
+                <div>Técnico em Ouriversaria</div>
                 <div>Técnico em Administração</div>
             </div>
         </section>
