--- a/sobresenai.html
+++ b/sobresenai.html
@@ -62,9 +62,9 @@
         <nav>
             <div>SENAI</div>
             <div>
-                <a href="index.html">Home</a>
-                <a href="sobre.html">Sobre</a>
-                <a href="contato.html">Contato</a>
+                <a href="cursos.html">CURSOS</a>
+                <a href="sobresenai.html">SOBRE</a>
+                <a href="labubu.html">CONTATO</a>
             </div>
         </nav>
     </div>
